adicionando mais sections

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a href="https://contate.me/brenoponticelli" class="whats"><img src="/img/whatsapp-svgrepo-com.svg"
                 alt="zap" width="25px" height="25px">Whatsaap</a>
                 <div class="redes">
-                    <img class="icon-redes" src="/img/instagram-svgrepo-com.svg" alt="instagram">
+                    <img  class="icon-redes" src="/img/instagram-svgrepo-com.svg" alt="instagram">
                     <img class="icon-redes" src="/img/linkedin-svgrepo-com.svg" alt="linkedin">
                     <img class="icon-redes" src="/img/github-svgrepo-com.svg" alt="github">
                 </div>
@@ -54,36 +54,45 @@
         </section>
         <section id="Habilidades">
             <h1>Tecnologias e Habilidades</h1>
+            <p class="p-tech">Tech que uso no dia a dia</p>
             <div class="Skills">
                 <div class="skil">
-                    <img class="icon-skill" src="/img/javascript-svgrepo-com.svg" alt="icon">
-                    <p class="nome-skill">JavaScript</p>
+                    <img class="icon-skill" src="/img/javascript-svgrepo-com.svg" alt="icon">   
                 </div>
                 <div class="skil">
                     <img class="icon-skill" src="/img/node-js-svgrepo-com.svg" alt="icon">
-                    <p class="nome-skill">Node</p>
                 </div>
                 <div class="skil">
-                    <img class="icon-skill" src="/img/html-124-svgrepo-com.svg" alt="icon">
-                    <p class="nome-skill">HTML</p>
+                    <img class="icon-skill" src="/img/html-124-svgrepo-com.svg" alt="icon"> 
                 </div>
                 <div class="skil">
-                    <img class="icon-skill" src="/img/css3-02-svgrepo-com.svg" alt="icon">
-                    <p class="nome-skill">CSS</p>
+                    <img class="icon-skill" src="/img/css3-02-svgrepo-com.svg" alt="icon">  
                 </div>
                 <div class="skil">
-                    <img class="icon-skill" src="/img/git-icon-svgrepo-com.svg" alt="icon">
-                    <p class="nome-skill">Git</p>
+                    <img class="icon-skill" src="/img/git-icon-svgrepo-com.svg" alt="icon"> 
                 </div>
                 <div class="skil">
                     <img class="icon-skill" src="/img/github-svgrepo-com.svg" alt="icon">
-                    <p class="nome-skill">GitHub</p>
+                </div>
+                <div class="skil">
+                    <img class="icon-skill" src="/img/vercel-fill-svgrepo-com.svg" alt="icon">
+                </div>
+            </div>
+            <p class="p-tech">Outras techs que já tive experiências</p>
+            <div class="Skills">
+                <div class="skil">
+                    <img class="icon-skill" src="/img/java-svgrepo-com.svg" alt="icon">
+                </div>
+                <div class="skil">
+                    <img class="icon-skill" src="/img/mysql-svgrepo-com.svg" alt="icon">
+                </div>
+                <div class="skil">
+                    <img class="icon-skill" src="/img/c.webp" alt="icon">
                 </div>
                 <div class="skil">
                     <img class="icon-skill" src="/img/python-svgrepo-com.svg" alt="icon">
-                    <p class="nome-skill">Python</p>
                 </div>
-            </div>
+            </div>    
         </section>
         <section id="Projects">
             <h1>Meus projetos</h1>
@@ -93,6 +102,12 @@
                     <h1 class="nome-projeto">Card Yellow</h1>
                 </div>
             </div>
+        </section>
+        <section id="carreira"></section>
+            <h1>Carreira</h1>
+        </section>
+        <section id="depoimento">
+            <h1>Feedbacks</h1>
         </section>
     </main>
     <footer>
