Adicionei mais containers

--- a/index.html
+++ b/index.html
@@ -16,21 +16,23 @@
             <a href="#About">Sobre mim</a>
             <a href="#Habilidades">Habilidades</a>
             <a href="#Projects">Projetos</a>
-            <a href="#footer">Contato</a>
+            <a href="#carreira">Carreira</a>
+            <a href="#depoimento">Depoimentos</a>
+            <a href="#span-container">Contato</a>
         </div>
     </header>
     <main>
         <section id="Home">
-            <div class="coinainer-text">
+            <div id="coinainer-text">
                 <h1 class="h1-home">Hello World!</h1>
                 <h1 class="h1-home">Sou <span class="name">Breno Souza <br>Ponticelli</span></h1>
                 <p class="paragraph-home">Full Stack Developer</p>
                 <a href="https://contate.me/brenoponticelli" class="whats"><img src="/img/whatsapp-svgrepo-com.svg"
                 alt="zap" width="25px" height="25px">Whatsaap</a>
                 <div class="redes">
-                    <img  class="icon-redes" src="/img/instagram-svgrepo-com.svg" alt="instagram">
-                    <img class="icon-redes" src="/img/linkedin-svgrepo-com.svg" alt="linkedin">
-                    <img class="icon-redes" src="/img/github-svgrepo-com.svg" alt="github">
+                    <a href="https://www.instagram.com/breno_sp7/"><img  class="icon-redes" src="/img/instagram-svgrepo-com.svg" alt="instagram"></a>
+                    <a href="https://www.linkedin.com/in/breno-ponticelli/"><img class="icon-redes" src="/img/linkedin-svgrepo-com.svg" alt="linkedin"></a>
+                    <a href="https://github.com/brenoiscde"><img class="icon-redes" src="/img/github-svgrepo-com.svg" alt="github"></a>
                 </div>
             </div>
             <div class="container-avatar">
@@ -43,6 +45,7 @@
         <button id="botaoSubir" title="voltarAoTopo"><img src="/img/arrow-sm-up-svgrepo-com.svg" 
         width="55px" height="50px" alt=""></button>
         <section id="About">
+            <span id="span-container">Sobre mim</span>
             <h1>Sobre mim</h1>
             <p>Muito prazer a todos!
                 Sou um apreciador da tecnologia.
@@ -53,6 +56,7 @@
                 quero fazer o curso Análise e Desenvolvimento de Sistema, para me aperfeiçoar mais e mais.</p>
         </section>
         <section id="Habilidades">
+            <span id="span-container">Skills & Experiências</span>
             <h1>Tecnologias e Habilidades</h1>
             <p class="p-tech">Tech que uso no dia a dia</p>
             <div class="Skills">
@@ -95,24 +99,125 @@
             </div>    
         </section>
         <section id="Projects">
+            <span id="span-container">Portfolio</span>
             <h1>Meus projetos</h1>
             <div class="lista-projetos">
                 <div class="projeto">
-                    <img class="image-projeto" src="/img/cardyellow.webp" alt="cardyellow">
                     <h1 class="nome-projeto">Card Yellow</h1>
+                    <p class="descricao-projeto">Descrição do projeto</p>
+                    <div class="ferramentas-usadas">
+                        <h2 class="ferramenta">Html</h2>
+                        <h2 class="ferramenta">CSS</h2>
+                    </div>
+                    <img class="image-projeto" src="/img/cardyellow.webp" alt="cardyellow">
+                </div>
+                <div class="projeto">
+                    <h1 class="nome-projeto">Card Yellow</h1>
+                    <p class="descricao-projeto">Descrição do projeto</p>
+                    <div class="ferramentas-usadas">
+                        <h2 class="ferramenta">Html</h2>
+                        <h2 class="ferramenta">CSS</h2>
+                    </div>
+                    <img class="image-projeto" src="/img/cardyellow.webp" alt="cardyellow">
+                </div>
+                <div class="projeto">
+                    <h1 class="nome-projeto">Card Yellow</h1>
+                    <p class="descricao-projeto">Descrição do projeto</p>
+                    <div class="ferramentas-usadas">
+                        <h2 class="ferramenta">Html</h2>
+                        <h2 class="ferramenta">CSS</h2>
+                    </div>
+                    <img class="image-projeto" src="/img/cardyellow.webp" alt="cardyellow">
                 </div>
             </div>
         </section>
-        <section id="carreira"></section>
-            <h1>Carreira</h1>
-        </section>
+        <span id="span-container">Carreira</span>
+            <h1>Trajetórai até aqui</h1>
+            <section id="carreira">
+                <div class="trajetoria">
+                    <div class="Estudos">
+                        <h1>Estudos</h1>
+                        <p class="ano">2020</p>
+                        <div class="container-estudos">
+                            <div class="estudo">
+                                <h2>Lógica de programação com Pyhton</h2>
+                                <p class="p-estudo">Estudei por 1 um ano de casa com cursos online e com o Yotube.
+                                    Terminei o curso gratuito do Gustavo Guanabra no Youtube e finzalizei
+                                    os cursos de Python básico na alura.
+                                </p>
+                                <h3>1 ano</h3>
+                            </div>
+                            <div class="estudo">
+                                <h2>Lógica de programação com Pyhton</h2>
+                                <p class="p-estudo">Estudei por 1 um ano de casa com cursos online e com o Yotube.
+                                    Terminei o curso gratuito do Gustavo Guanabra no Youtube e finzalizei
+                                    os cursos de Python básico na alura.
+                                </p>
+                                <h3>1 ano</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="academico">
+                        <div class="academicos">
+                            <dir class="academico">
+                                <h1>Acadêmica</h1>
+                                <p class="ano">2024</p>
+                                <div class="container-academica">
+                                    <div class="estudo">
+                                        <h2>Lógica de programação com Pyhton</h2>
+                                        <p class="p-estudo">Estudei por 1 um ano de casa com cursos online e com o Yotube.
+                                            Terminei o curso gratuito do Gustavo Guanabra no Youtube e finzalizei
+                                            os cursos de Python básico na alura.
+                                        </p>
+                                        <h3>1 ano</h3>
+                                    </div>
+                                    <div class="estudo">
+                                        <h2>Lógica de programação com Pyhton</h2>
+                                        <p class="p-estudo">Estudei por 1 um ano de casa com cursos online e com o Yotube.
+                                            Terminei o curso gratuito do Gustavo Guanabra no Youtube e finzalizei
+                                            os cursos de Python básico na alura.
+                                        </p>
+                                        <h3>1 ano</h3>
+                                    </div>
+                                </div>
+                            </dir>
+                        </div>
+                    </div>
+                </div>    
+            </section>
+        <span id="span-container">Depoimentos</span>
+        <h1>Feedbacks</h1>
         <section id="depoimento">
-            <h1>Feedbacks</h1>
+            <div class="depoimento">
+                <p class="p-depoimento">Sou Wallace, instrutor de programação da PrismaTech, e gostaria de destacar o excelente desempenho do Breno em nossa turma. 
+                Breno é um aluno excepcional, demonstrando grande esforço e inteligência. Ele não só se destaca individualmente, mas também contribui significativamente
+                ajudando os colegas a concluir seus exercícios. Sua dedicação e disposição para colaborar com a turma são notáveis.    
+                Não há grandes ajustes a fazer; apenas sugerimos que continue focado e se desenvolvendo da mesma forma. Seu progresso é muito positivo e apreciado. 
+                <div class="user-depoimento">
+                    <img class="avatar-user" src="/img/WhatsApp Image 2024-09-16 at 10.14.09.jpeg" alt="">
+                    <div class="Nome">
+                        <h1 class="nome-user">Wallace Professor</h1>
+                        <h2 class="profissao-user">Analista de sistemas</h2>
+                    </div>
+                </div>
+            </div>
         </section>
+        <span id="span-container">Contatos</span>
+        <h1>Vamos conversar!</h1>
+        <div class="contatos">
+            <a class="whats-contatos" href="https://contate.me/brenoponticelli"><img src="/img/whatsapp-svgrepo-com.svg"
+            alt="zap" width="25px" height="25px">Whatsaap</a>
+            <div class="email">
+                <a href=""><img src="/img/send-2-svgrepo-com.svg" alt="send" width="40" height="40"></a>
+                <h2>E-mail</h2>
+                <p class="email">brenosouzaponticelli@gmail.com</p>
+                <img src="/img/copy-svgrepo-com.svg" alt="copy" width="40" height="40">
+            </div>
+        </div>
     </main>
     <footer>
         <p class="footer-p">Copyright @Breno Ponticelli 2024</p>
-        <div class="redes">
+        <div class="redes-footer">
             <img class="icon-redes" src="/img/instagram-svgrepo-com.svg" alt="instagram">
             <img class="icon-redes" src="/img/linkedin-svgrepo-com.svg" alt="linkedin">
             <img class="icon-redes" src="/img/github-svgrepo-com.svg" alt="github">
