--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="#Projects">Projetos</a>
             <a href="#carreira">Carreira</a>
             <a href="#depoimento">Depoimentos</a>
-            <a href="#span-container">Contato</a>
+            <a href="#contato">Contato</a>
         </div>
     </header>
     <main>
@@ -64,19 +64,19 @@
                     <img class="icon-skill" src="/img/javascript-svgrepo-com.svg" alt="icon">   
                 </div>
                 <div class="skil">
-                    <img class="icon-skill" src="/img/node-js-svgrepo-com.svg" alt="icon">
+                    <img class="icon-skill" src="/img/node-js-svgrepo-com (1).svg" alt="icon">
                 </div>
                 <div class="skil">
-                    <img class="icon-skill" src="/img/html-124-svgrepo-com.svg" alt="icon"> 
+                    <img class="icon-skill" src="/img/html-5-svgrepo-com.svg" alt="icon"> 
                 </div>
                 <div class="skil">
-                    <img class="icon-skill" src="/img/css3-02-svgrepo-com.svg" alt="icon">  
+                    <img class="icon-skill" src="/img/css-3-svgrepo-com.svg" alt="icon">  
                 </div>
                 <div class="skil">
-                    <img class="icon-skill" src="/img/git-icon-svgrepo-com.svg" alt="icon"> 
+                    <img class="icon-skill" src="/img/git-svgrepo-com.svg" alt="icon"> 
                 </div>
                 <div class="skil">
-                    <img class="icon-skill" src="/img/github-svgrepo-com.svg" alt="icon">
+                    <img class="icon-skill" src="/img/github-142-svgrepo-com (1).svg" alt="icon">
                 </div>
                 <div class="skil">
                     <img class="icon-skill" src="/img/vercel-fill-svgrepo-com.svg" alt="icon">
@@ -91,7 +91,7 @@
                     <img class="icon-skill" src="/img/mysql-svgrepo-com.svg" alt="icon">
                 </div>
                 <div class="skil">
-                    <img class="icon-skill" src="/img/c.webp" alt="icon">
+                    <img class="icon-skill" src="/img/c.png" alt="icon">
                 </div>
                 <div class="skil">
                     <img class="icon-skill" src="/img/python-svgrepo-com.svg" alt="icon">
@@ -132,58 +132,46 @@
             </div>
         </section>
         <span id="span-container">Carreira</span>
-            <h1>Trajetórai até aqui</h1>
-            <section id="carreira">
-                <div class="trajetoria">
-                    <div class="Estudos">
+            <h1>Percurso até agora</h1>
+            <section id="carreira"> 
+                <div class="carreira">
+                    <div class="estudos">
                         <h1>Estudos</h1>
-                        <p class="ano">2020</p>
-                        <div class="container-estudos">
-                            <div class="estudo">
-                                <h2>Lógica de programação com Pyhton</h2>
-                                <p class="p-estudo">Estudei por 1 um ano de casa com cursos online e com o Yotube.
-                                    Terminei o curso gratuito do Gustavo Guanabra no Youtube e finzalizei
-                                    os cursos de Python básico na alura.
-                                </p>
-                                <h3>1 ano</h3>
-                            </div>
-                            <div class="estudo">
-                                <h2>Lógica de programação com Pyhton</h2>
-                                <p class="p-estudo">Estudei por 1 um ano de casa com cursos online e com o Yotube.
-                                    Terminei o curso gratuito do Gustavo Guanabra no Youtube e finzalizei
-                                    os cursos de Python básico na alura.
-                                </p>
-                                <h3>1 ano</h3>
-                            </div>
-                        </div>
+                        <p class="anos">2020</p>
+                        <section class="container-estudo">
+                            <h1 class="nome-estudo">desenvolvedor Frotn-end</h1>
+                            <p class="p-estudo">Desenvolvimento de features na aplicação principal e site.
+                            com React Js e Typescript, além do auxíllio de outras tecnologias como Next,
+                            Styled Components e padrões de arquitetura.</p>
+                            <h3 class="ano">1 ano e 7 meses</h3>
+                        </section>
+                        <section class="container-estudo">
+                            <h1 class="nome-estudo">desenvolvedor Frotn-end</h1>
+                            <p class="p-estudo">Desenvolvimento de features na aplicação principal e site.
+                            com React Js e Typescript, além do auxíllio de outras tecnologias como Next,
+                            Styled Components e padrões de arquitetura.</p>
+                            <h3 class="ano">1 ano e 7 meses</h3>
+                        </section>
                     </div>
-                    <div class="academico">
-                        <div class="academicos">
-                            <dir class="academico">
-                                <h1>Acadêmica</h1>
-                                <p class="ano">2024</p>
-                                <div class="container-academica">
-                                    <div class="estudo">
-                                        <h2>Lógica de programação com Pyhton</h2>
-                                        <p class="p-estudo">Estudei por 1 um ano de casa com cursos online e com o Yotube.
-                                            Terminei o curso gratuito do Gustavo Guanabra no Youtube e finzalizei
-                                            os cursos de Python básico na alura.
-                                        </p>
-                                        <h3>1 ano</h3>
-                                    </div>
-                                    <div class="estudo">
-                                        <h2>Lógica de programação com Pyhton</h2>
-                                        <p class="p-estudo">Estudei por 1 um ano de casa com cursos online e com o Yotube.
-                                            Terminei o curso gratuito do Gustavo Guanabra no Youtube e finzalizei
-                                            os cursos de Python básico na alura.
-                                        </p>
-                                        <h3>1 ano</h3>
-                                    </div>
-                                </div>
-                            </dir>
-                        </div>
+                    <div class="academicos">
+                        <h1>Academico</h1>
+                        <p class="anos">2020</p>
+                        <section class="container-academico">
+                            <h1 class="nome-academico">desenvolvedor Frotn-end</h1>
+                            <p class="p-academico">Desenvolvimento de features na aplicação principal e site.
+                            com React Js e Typescript, além do auxíllio de outras tecnologias como Next,
+                            Styled Components e padrões de arquitetura.</p>
+                            <h3 class="ano">1 ano e 7 meses</h3>
+                        </section>
+                        <section class="container-estudo">
+                            <h1 class="nome-academico">desenvolvedor Frotn-end</h1>
+                            <p class="p-academico">Desenvolvimento de features na aplicação principal e site.
+                            com React Js e Typescript, além do auxíllio de outras tecnologias como Next,
+                            Styled Components e padrões de arquitetura.</p>
+                            <h3 class="ano">1 ano e 7 meses</h3>
+                        </section>
                     </div>
-                </div>    
+                </div>   
             </section>
         <span id="span-container">Depoimentos</span>
         <h1>Feedbacks</h1>
@@ -197,26 +185,27 @@
                     <img class="avatar-user" src="/img/WhatsApp Image 2024-09-16 at 10.14.09.jpeg" alt="">
                     <div class="Nome">
                         <h1 class="nome-user">Wallace Professor</h1>
-                        <h2 class="profissao-user">Analista de sistemas</h2>
+                        <h2 class="profissao-user">Desenvolvedor Web</h2>
                     </div>
                 </div>
             </div>
         </section>
         <span id="span-container">Contatos</span>
-        <h1>Vamos conversar!</h1>
+        <h1 id="contato">Vamos conversar!</h1>
         <div class="contatos">
-            <a class="whats-contatos" href="https://contate.me/brenoponticelli"><img src="/img/whatsapp-svgrepo-com.svg"
+            <a class="whats" href="https://contate.me/brenoponticelli"><img src="/img/whatsapp-svgrepo-com.svg"
             alt="zap" width="25px" height="25px">Whatsaap</a>
             <div class="email">
-                <a href=""><img src="/img/send-2-svgrepo-com.svg" alt="send" width="40" height="40"></a>
+                <a href="mailto:brenosouzaponticelli@gmail.com"><img src="/img/send-2-svgrepo-com.svg" alt="send" width="40" height="40"></a>
                 <h2>E-mail</h2>
                 <p class="email">brenosouzaponticelli@gmail.com</p>
-                <img src="/img/copy-svgrepo-com.svg" alt="copy" width="40" height="40">
+                <img id="copy-email"src="/img/copy-svgrepo-com.svg" alt="copy" width="40" height="40">
+                <button onclick="copiaEmail()">clica</button>
             </div>
         </div>
     </main>
     <footer>
-        <p class="footer-p">Copyright @Breno Ponticelli 2024</p>
+        <p class="footer-p">Desenvolvido por @Breno Ponticelli 2024</p>
         <div class="redes-footer">
             <img class="icon-redes" src="/img/instagram-svgrepo-com.svg" alt="instagram">
             <img class="icon-redes" src="/img/linkedin-svgrepo-com.svg" alt="linkedin">
