adicionado mais elementos

--- a/index.html
+++ b/index.html
@@ -103,30 +103,42 @@
             <h1>Meus projetos</h1>
             <div class="lista-projetos">
                 <div class="projeto">
-                    <h1 class="nome-projeto">Card Yellow</h1>
+                    <div class="git-hub-projeto">
+                        <h1 class="nome-projeto">Card Yellow</h1>
+                        <a href="https://github.com/brenoiscde"><img class="icon-redes" src="/img/github-142-svgrepo-com (1).svg" alt="github"></a>
+                    </div>
                     <p class="descricao-projeto">Descrição do projeto</p>
                     <div class="ferramentas-usadas">
                         <h2 class="ferramenta">Html</h2>
                         <h2 class="ferramenta">CSS</h2>
                     </div>
+                    <a class="ver-projeto" href="">Ver projeto</a>
                     <img class="image-projeto" src="/img/cardyellow.webp" alt="cardyellow">
                 </div>
                 <div class="projeto">
-                    <h1 class="nome-projeto">Card Yellow</h1>
+                    <div class="git-hub-projeto">
+                        <h1 class="nome-projeto">Card Yellow</h1>
+                        <a href="https://github.com/brenoiscde"><img class="icon-redes" src="/img/github-142-svgrepo-com (1).svg" alt="github"></a>
+                    </div>
                     <p class="descricao-projeto">Descrição do projeto</p>
                     <div class="ferramentas-usadas">
                         <h2 class="ferramenta">Html</h2>
                         <h2 class="ferramenta">CSS</h2>
                     </div>
+                    <a class="ver-projeto" href="">Ver projeto</a>
                     <img class="image-projeto" src="/img/cardyellow.webp" alt="cardyellow">
                 </div>
                 <div class="projeto">
-                    <h1 class="nome-projeto">Card Yellow</h1>
+                    <div class="git-hub-projeto">
+                        <h1 class="nome-projeto">Card Yellow</h1>
+                        <a href="https://github.com/brenoiscde"><img class="icon-redes" src="/img/github-142-svgrepo-com (1).svg" alt="github"></a>
+                    </div>
                     <p class="descricao-projeto">Descrição do projeto</p>
                     <div class="ferramentas-usadas">
                         <h2 class="ferramenta">Html</h2>
                         <h2 class="ferramenta">CSS</h2>
                     </div>
+                    <a class="ver-projeto" href="">Ver projeto</a>
                     <img class="image-projeto" src="/img/cardyellow.webp" alt="cardyellow">
                 </div>
             </div>
@@ -154,10 +166,10 @@
                         </section>
                     </div>
                     <div class="academicos">
-                        <h1>Academico</h1>
+                        <h1>Acadêmico</h1>
                         <p class="anos">2020</p>
                         <section class="container-academico">
-                            <h1 class="nome-academico">desenvolvedor Frotn-end</h1>
+                            <h1 class="nome-academico">desenvolvedor Front-end</h1>
                             <p class="p-academico">Desenvolvimento de features na aplicação principal e site.
                             com React Js e Typescript, além do auxíllio de outras tecnologias como Next,
                             Styled Components e padrões de arquitetura.</p>
@@ -200,16 +212,15 @@
                 <h2>E-mail</h2>
                 <p class="email">brenosouzaponticelli@gmail.com</p>
                 <img id="copy-email"src="/img/copy-svgrepo-com.svg" alt="copy" width="40" height="40">
-                <button onclick="copiaEmail()">clica</button>
             </div>
         </div>
     </main>
     <footer>
         <p class="footer-p">Desenvolvido por @Breno Ponticelli 2024</p>
         <div class="redes-footer">
-            <img class="icon-redes" src="/img/instagram-svgrepo-com.svg" alt="instagram">
-            <img class="icon-redes" src="/img/linkedin-svgrepo-com.svg" alt="linkedin">
-            <img class="icon-redes" src="/img/github-svgrepo-com.svg" alt="github">
+            <a href="https://www.instagram.com/breno_sp7/"><img  class="icon-redes" src="/img/instagram-svgrepo-com.svg" alt="instagram"></a>
+            <a href="https://www.linkedin.com/in/breno-ponticelli/"><img class="icon-redes" src="/img/linkedin-svgrepo-com.svg" alt="linkedin"></a>
+            <a href="https://github.com/brenoiscde"><img class="icon-redes" src="/img/github-svgrepo-com.svg" alt="github"></a>
         </div>
     </footer>
     <script src="/js/script.js"></script>
