adicionando conteudo nos containers

--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
                 <div class="skil">
                     <img class="icon-skill" src="/img/vercel-fill-svgrepo-com.svg" alt="icon">
                 </div>
+                <div class="skil">
+                    <img class="icon-skill" src="/img/express-svgrepo-com (1).svg" alt="icon">
+                </div>
             </div>
             <p class="p-tech">Outras techs que já tive experiências</p>
             <div class="Skills">
@@ -105,41 +108,42 @@
                 <div class="projeto">
                     <div class="git-hub-projeto">
                         <h1 class="nome-projeto">Card Yellow</h1>
-                        <a href="https://github.com/brenoiscde"><img class="icon-redes" src="/img/github-142-svgrepo-com (1).svg" alt="github"></a>
+                        <a href="https://github.com/brenoiscde/project-card-yellow-"><img class="icon-redes" src="/img/github-142-svgrepo-com (1).svg" alt="github"></a>
                     </div>
                     <p class="descricao-projeto">Descrição do projeto</p>
                     <div class="ferramentas-usadas">
                         <h2 class="ferramenta">Html</h2>
                         <h2 class="ferramenta">CSS</h2>
                     </div>
-                    <a class="ver-projeto" href="">Ver projeto</a>
+                    <a class="ver-projeto" href="https://project-card-yellow--eta.vercel.app">Ver projeto</a>
                     <img class="image-projeto" src="/img/cardyellow.webp" alt="cardyellow">
                 </div>
                 <div class="projeto">
                     <div class="git-hub-projeto">
-                        <h1 class="nome-projeto">Card Yellow</h1>
-                        <a href="https://github.com/brenoiscde"><img class="icon-redes" src="/img/github-142-svgrepo-com (1).svg" alt="github"></a>
+                        <h1 class="nome-projeto">Calculadora</h1>
+                        <a href="https://github.com/brenoiscde/Calculadora-web"><img class="icon-redes" src="/img/github-142-svgrepo-com (1).svg" alt="github"></a>
                     </div>
                     <p class="descricao-projeto">Descrição do projeto</p>
                     <div class="ferramentas-usadas">
                         <h2 class="ferramenta">Html</h2>
                         <h2 class="ferramenta">CSS</h2>
+                        <h2 class="ferramenta">JS</h2>
                     </div>
-                    <a class="ver-projeto" href="">Ver projeto</a>
-                    <img class="image-projeto" src="/img/cardyellow.webp" alt="cardyellow">
+                    <a class="ver-projeto" href="https://calculadora-web-brenoiscde.vercel.app">Ver projeto</a>
+                    <img class="image-projeto" src="/img/calculadora.webp" alt="cardyellow">
                 </div>
                 <div class="projeto">
                     <div class="git-hub-projeto">
-                        <h1 class="nome-projeto">Card Yellow</h1>
-                        <a href="https://github.com/brenoiscde"><img class="icon-redes" src="/img/github-142-svgrepo-com (1).svg" alt="github"></a>
+                        <h1 class="nome-projeto">Formulário</h1>
+                        <a href="https://github.com/brenoiscde/formulario"><img class="icon-redes" src="/img/github-142-svgrepo-com (1).svg" alt="github"></a>
                     </div>
                     <p class="descricao-projeto">Descrição do projeto</p>
                     <div class="ferramentas-usadas">
                         <h2 class="ferramenta">Html</h2>
                         <h2 class="ferramenta">CSS</h2>
                     </div>
-                    <a class="ver-projeto" href="">Ver projeto</a>
-                    <img class="image-projeto" src="/img/cardyellow.webp" alt="cardyellow">
+                    <a class="ver-projeto" href="https://github.com/brenoiscde/formulario">Ver projeto</a>
+                    <img class="image-projeto" src="/img/foto-form.webp" alt="cardyellow">
                 </div>
             </div>
         </section>
@@ -149,38 +153,42 @@
                 <div class="carreira">
                     <div class="estudos">
                         <h1>Estudos</h1>
-                        <p class="anos">2020</p>
+                        <p class="anos">2022</p>
                         <section class="container-estudo">
-                            <h1 class="nome-estudo">desenvolvedor Frotn-end</h1>
-                            <p class="p-estudo">Desenvolvimento de features na aplicação principal e site.
-                            com React Js e Typescript, além do auxíllio de outras tecnologias como Next,
-                            Styled Components e padrões de arquitetura.</p>
-                            <h3 class="ano">1 ano e 7 meses</h3>
+                            <h1 class="nome-estudo">Lógica de programação com Python</h1>
+                            <p class="p-estudo">Fiz o curso inteiro do Gustavo Guanara de python no Youtube.
+                            Onde eu prendi variáveis, arrays, funções, manipulação de strings, estruturas condicionais 
+                            e estruturas de repetição.
+                            </p>
+                            <h3 class="ano">5 meses</h3>
                         </section>
                         <section class="container-estudo">
-                            <h1 class="nome-estudo">desenvolvedor Frotn-end</h1>
-                            <p class="p-estudo">Desenvolvimento de features na aplicação principal e site.
-                            com React Js e Typescript, além do auxíllio de outras tecnologias como Next,
-                            Styled Components e padrões de arquitetura.</p>
-                            <h3 class="ano">1 ano e 7 meses</h3>
+                            <h1 class="nome-estudo">Curso Alura </h1>
+                            <p class="p-estudo">No curso da Alura iniciei estudando Python,aprendi o básico e um pouco de classes.
+                            Ia começar a estudar frameworks para desenvolver na web Python usando o Django e Flask, mas não consegui iniciar.
+                            Voltei a estudar na alura por agora
+                            </p>
+                            <h3 class="ano">1 ano </h3>
                         </section>
                     </div>
                     <div class="academicos">
                         <h1>Acadêmico</h1>
-                        <p class="anos">2020</p>
-                        <section class="container-academico">
-                            <h1 class="nome-academico">desenvolvedor Front-end</h1>
-                            <p class="p-academico">Desenvolvimento de features na aplicação principal e site.
-                            com React Js e Typescript, além do auxíllio de outras tecnologias como Next,
-                            Styled Components e padrões de arquitetura.</p>
-                            <h3 class="ano">1 ano e 7 meses</h3>
+                        <p class="anos">2021 a 2023</p>
+                        <section class="container-estudo">
+                            <h1 class="nome-academico">Ensino Médio Integrado - Redes</h1>
+                            <p class="p-estudo">Nesses 3 anos consegui aprender um pouco de algumas bases do programador.
+                            Como a lógica de programação com Portugal e em seguida usando C. Comecei a mexer com servidores Web,
+                            banco de dados My Sql e o entendimento de protocolos na web.
+                            </p>
+                            <h3 class="ano">3 anos</h3>
                         </section>
                         <section class="container-estudo">
-                            <h1 class="nome-academico">desenvolvedor Frotn-end</h1>
-                            <p class="p-academico">Desenvolvimento de features na aplicação principal e site.
-                            com React Js e Typescript, além do auxíllio de outras tecnologias como Next,
-                            Styled Components e padrões de arquitetura.</p>
-                            <h3 class="ano">1 ano e 7 meses</h3>
+                            <h1 class="nome-academico">Curso Prisma - Desenvolvedor Web</h1>
+                            <p class="p-estudo">Nesse curso estou aprendendo a utilizar ferramentas focadas ao
+                            desenvolvendo Web. Com ele aperfeiçoei meu HTML e CSS. Aprendi JavaScript e estou
+                            apaixondo pela linguagem. Agora estou aprendendo APIS com express e utilizando o Node
+                            para trabalhar com o back-end.</p>
+                            <h3 class="ano">3 anos</h3>
                         </section>
                     </div>
                 </div>   
