responsividade mobile HOME

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </nav>
         <div class="header-mobile">
                 <h1>Portfólio</h1>
-                <button class="mobile-menu-icon" onclick="menuShow()"><img class="icon" src="/img/justify-fill-svgrepo-com.svg" alt=""></button>
+                <button class="mobile-menu-icon" onclick="menuShow()"><img class="icon" src="/img/justify-fill-svgrepo-com.svg" width="45" alt=""></button>
         </div>
         <div class="mobile-menu">
                 <li class="nav-item"><a href="#Home">Home</a></li>
